--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <script src="/javascripts/vendor/react.js"></script>
   <script src="/javascripts/vendor/react-dom.js"></script>
   <script src="/javascripts/vendor/browser.js"></script>
+  <script src="/javascripts/vendor/redux.js"></script>
 </head>
 <body>
 
