Rename css file

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Tic Tac Toe</title>
+
   <link rel="stylesheet" href="/css/vendor/bootstrap.min.css" />
-  <link rel="stylesheet" href="/css/tictactoe.css" />
+  <link rel="stylesheet" href="/css/application.css" />
+
   <script src="/javascripts/vendor/react.js"></script>
   <script src="/javascripts/vendor/react-dom.js"></script>
   <script src="/javascripts/vendor/browser.js"></script>
