--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Tic Tac Toe</title>
+  <title>Tic Tac Toe in React.js / Redux / ES5</title>
 
   <link rel="stylesheet" href="/css/vendor/bootstrap.min.css" />
   <link rel="stylesheet" href="/css/application.css" />
